--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+{% extends "base.html" %}
+{% block content %}
+<h1>GD Terms</h1>
+<ul>
+    {% for term in terms %}
+    <li class="term"><strong>{{ term.term }}</strong>: {{ term.definition }}</li>
+    {% endfor %}
+</ul>
+{% endblock %}
 
